objects/tffa__Expense__c.object
<CustomObject>
    <description>An expense consists of the economic costs a business incurs through its operations to earn revenue.</description>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A free-form text field used to capture additional information when Other is selected for Expense Type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialYear__c</fullName>
        <description>Financial year for which data is captured as per tax records.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MonthlyAmount__c</fullName>
        <description>The dollar amount associated with the monthly expense amount for the given expense Type.</description>
        <label>Monthly amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OtherType__c</fullName>
        <description>Other expense type</description>
        <label>Other type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OtherExpenseType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>Reference to parent party object</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Provider__c</fullName>
        <description>The provider of the expense record.For an aggregator, it will store the name of the aggregator and source will store the actual source/platform used within the aggregator.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source/provider for this expense if it sourced from a external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Specifies the type of expense for reimbursed tasks or services performed.Specifies the type of expense for reimbursed tasks or services performed.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ExpenseType</valueSetName>
        </valueSet>
    </fields>
    <label>Expense</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>